--- a/code.ipynb
+++ b/code.ipynb
@@ -2,6 +2,38 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting wordcloud\n",
+      "  Downloading wordcloud-1.8.2.2-cp39-cp39-win_amd64.whl (153 kB)\n",
+      "     ------------------------------------ 153.1/153.1 kB 294.5 kB/s eta 0:00:00\n",
+      "Requirement already satisfied: numpy>=1.6.1 in c:\\users\\nairm\\anaconda3\\lib\\site-packages (from wordcloud) (1.21.5)\n",
+      "Requirement already satisfied: pillow in c:\\users\\nairm\\anaconda3\\lib\\site-packages (from wordcloud) (9.2.0)\n",
+      "Requirement already satisfied: matplotlib in c:\\users\\nairm\\anaconda3\\lib\\site-packages (from wordcloud) (3.5.2)\n",
+      "Requirement already satisfied: fonttools>=4.22.0 in c:\\users\\nairm\\anaconda3\\lib\\site-packages (from matplotlib->wordcloud) (4.25.0)\n",
+      "Requirement already satisfied: pyparsing>=2.2.1 in c:\\users\\nairm\\anaconda3\\lib\\site-packages (from matplotlib->wordcloud) (3.0.9)\n",
+      "Requirement already satisfied: python-dateutil>=2.7 in c:\\users\\nairm\\anaconda3\\lib\\site-packages (from matplotlib->wordcloud) (2.8.2)\n",
+      "Requirement already satisfied: cycler>=0.10 in c:\\users\\nairm\\anaconda3\\lib\\site-packages (from matplotlib->wordcloud) (0.11.0)\n",
+      "Requirement already satisfied: packaging>=20.0 in c:\\users\\nairm\\anaconda3\\lib\\site-packages (from matplotlib->wordcloud) (21.3)\n",
+      "Requirement already satisfied: kiwisolver>=1.0.1 in c:\\users\\nairm\\anaconda3\\lib\\site-packages (from matplotlib->wordcloud) (1.4.2)\n",
+      "Requirement already satisfied: six>=1.5 in c:\\users\\nairm\\anaconda3\\lib\\site-packages (from python-dateutil>=2.7->matplotlib->wordcloud) (1.16.0)\n",
+      "Installing collected packages: wordcloud\n",
+      "Successfully installed wordcloud-1.8.2.2\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
+   "source": [
+    "%pip install wordcloud"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 14,
    "metadata": {},
    "outputs": [],
@@ -29,13 +61,7 @@
     "from sklearn.linear_model import SGDClassifier\n",
     "from sklearn import metrics\n",
     "from sklearn.metrics import f1_score,precision_score,recall_score\n",
-    "from sklearn import svm\n",
     "from sklearn.linear_model import LogisticRegression\n",
-    "from skmultilearn.adapt import mlknn\n",
-    "from skmultilearn.problem_transform import ClassifierChain\n",
-    "from skmultilearn.problem_transform import BinaryRelevance\n",
-    "from skmultilearn.problem_transform import LabelPowerset\n",
-    "from sklearn.naive_bayes import GaussianNB\n",
     "from datetime import datetime\n"
    ]
   },
@@ -88,7 +114,6 @@
     "    start = datetime.now()\n",
     "    con = sqlite3.connect('train.db')\n",
     "    num_rows = pd.read_sql_query(\"\"\"SELECT count(*) FROM data\"\"\", con)\n",
-    "    #Always remember to close the database\n",
     "    print(\"Number of rows in the database :\",\"\\n\",num_rows['count(*)'].values[0])\n",
     "    con.close()\n",
     "    print(\"Time taken to count the number of rows :\", datetime.now() - start)\n",
@@ -417,7 +442,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "EDA"
+    "# EDA"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Number of times each question appeared in our database"
    ]
   },
   {
@@ -443,7 +475,6 @@
     }
    ],
    "source": [
-    "# number of times each question appeared in our database\n",
     "df_no_dup.cnt_dup.value_counts()"
    ]
   },
@@ -469,8 +500,14 @@
     }
    ],
    "source": [
-    "# number of times each question appeared in our database\n",
     "df_no_dup.tag_count.value_counts()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Creating a new database with no duplicates"
    ]
   },
   {
@@ -479,7 +516,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Creating a new database with no duplicates\n",
     "if not os.path.isfile('train_no_dup.db'):\n",
     "    disk_dup = create_engine(\"sqlite:///train_no_dup.db\")\n",
     "    no_dup = pd.DataFrame(df_no_dup, columns=['Title', 'Body', 'Tags'])\n",
@@ -496,7 +532,6 @@
     "    start = datetime.now()\n",
     "    con = sqlite3.connect('train_no_dup.db')\n",
     "    tag_data = pd.read_sql_query(\"\"\"SELECT Tags FROM no_dup_train\"\"\", con)\n",
-    "    #Always remember to close the database\n",
     "    con.close()"
    ]
   },
@@ -607,37 +642,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Let's now drop unwanted row.\n",
-    "# tag_data.drop(tag_data.index[0], inplace=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# tag_data.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
     "tag_data[\"Tags\"] = tag_data[\"Tags\"].apply(lambda text : str(text))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Tag Analysis"
    ]
   },
   {
@@ -762,6 +771,13 @@
    "source": [
     "sql_create_table = \"\"\"CREATE TABLE IF NOT EXISTS QuestionsProcessed (question text NOT NULL, code text, tags text, words_pre integer, words_post integer, is_code integer);\"\"\"\n",
     "create_database_table(\"Processed.db\", sql_create_table)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Sampling 1 Million Questions"
    ]
   },
   {
@@ -935,12 +951,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Taking 1 Million entries to a dataframe."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Taking 1 Million entries to a dataframe.\n",
     "write_db = 'Processed.db'\n",
     "if os.path.isfile(write_db):\n",
     "    conn_r = create_connection(write_db)\n",
@@ -1058,7 +1080,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Machine Learning Models"
+    "# Machine Learning Model"
    ]
   },
   {
@@ -1082,12 +1104,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Converting into a Binary Vector"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# binary='true' will give a binary vectorizer\n",
     "vectorizer = CountVectorizer(tokenizer = lambda x: x.split(), binary='true')\n",
     "multilabel_y = vectorizer.fit_transform(preprocessed_data['tags'])"
    ]
@@ -1096,7 +1124,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Sampling tags"
+    "# Sampling tags"
    ]
   },
   {
@@ -1162,7 +1190,6 @@
     "plt.ylabel(\"Number Questions coverd partially\")\n",
     "plt.grid()\n",
     "plt.show()\n",
-    "# you can choose any number of tags based on your computing power, minimun is 50(it covers 90% of the tags)\n",
     "print(\"with \",5500,\"tags we are covering \",questions_explained[50],\"% of questions\")"
    ]
   },
@@ -1207,7 +1234,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Train -Test Split\n"
+    "# Train -Test Split\n"
    ]
   },
   {
@@ -1249,7 +1276,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Featurizing Data"
+    "# Featurizing Data"
    ]
   },
   {
@@ -1295,28 +1322,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: scikit-learn in c:\\users\\nairm\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.10_qbz5n2kfra8p0\\localcache\\local-packages\\python310\\site-packages (1.1.3)\n",
-      "Requirement already satisfied: numpy>=1.17.3 in c:\\users\\nairm\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.10_qbz5n2kfra8p0\\localcache\\local-packages\\python310\\site-packages (from scikit-learn) (1.23.4)\n",
-      "Requirement already satisfied: threadpoolctl>=2.0.0 in c:\\users\\nairm\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.10_qbz5n2kfra8p0\\localcache\\local-packages\\python310\\site-packages (from scikit-learn) (3.1.0)\n",
-      "Requirement already satisfied: joblib>=1.0.0 in c:\\users\\nairm\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.10_qbz5n2kfra8p0\\localcache\\local-packages\\python310\\site-packages (from scikit-learn) (1.2.0)\n",
-      "Requirement already satisfied: scipy>=1.3.2 in c:\\users\\nairm\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.10_qbz5n2kfra8p0\\localcache\\local-packages\\python310\\site-packages (from scikit-learn) (1.9.3)\n",
-      "Note: you may need to restart the kernel to use updated packages.\n"
-     ]
-    }
-   ],
-   "source": [
-    "%pip install scikit-learn"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 59,
    "metadata": {},
    "outputs": [],
@@ -1357,10 +1362,6 @@
     }
    ],
    "source": [
-    "# this will be taking so much time try not to run it, download the lr_with_equal_weight.pkl file and use to predict\n",
-    "# This takes about 6-7 hours to run.\n",
-    "\n",
-    "\n",
     "# classifier = OneVsRestClassifier(SGDClassifier(loss='log', alpha=0.00001, penalty='l1'), n_jobs=-1)\n",
     "# classifier.fit(x_train_multilabel, y_train)"
    ]
@@ -6921,7 +6922,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.8 64-bit (microsoft store)",
+   "display_name": "Python 3.9.13 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -6935,12 +6936,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.9.13"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "fc6313414460692e2a424730460eaeeb0ce6c3c65e5e2edac66a1d48e7a78334"
+    "hash": "eecee88d82e033e596ebd607ad429a20874bef18bfeedb4258ce6b26b139d428"
    }
   }
  },
