--- a/code.ipynb
+++ b/code.ipynb
@@ -2,38 +2,6 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Collecting wordcloud\n",
-      "  Downloading wordcloud-1.8.2.2-cp39-cp39-win_amd64.whl (153 kB)\n",
-      "     ------------------------------------ 153.1/153.1 kB 294.5 kB/s eta 0:00:00\n",
-      "Requirement already satisfied: numpy>=1.6.1 in c:\\users\\nairm\\anaconda3\\lib\\site-packages (from wordcloud) (1.21.5)\n",
-      "Requirement already satisfied: pillow in c:\\users\\nairm\\anaconda3\\lib\\site-packages (from wordcloud) (9.2.0)\n",
-      "Requirement already satisfied: matplotlib in c:\\users\\nairm\\anaconda3\\lib\\site-packages (from wordcloud) (3.5.2)\n",
-      "Requirement already satisfied: fonttools>=4.22.0 in c:\\users\\nairm\\anaconda3\\lib\\site-packages (from matplotlib->wordcloud) (4.25.0)\n",
-      "Requirement already satisfied: pyparsing>=2.2.1 in c:\\users\\nairm\\anaconda3\\lib\\site-packages (from matplotlib->wordcloud) (3.0.9)\n",
-      "Requirement already satisfied: python-dateutil>=2.7 in c:\\users\\nairm\\anaconda3\\lib\\site-packages (from matplotlib->wordcloud) (2.8.2)\n",
-      "Requirement already satisfied: cycler>=0.10 in c:\\users\\nairm\\anaconda3\\lib\\site-packages (from matplotlib->wordcloud) (0.11.0)\n",
-      "Requirement already satisfied: packaging>=20.0 in c:\\users\\nairm\\anaconda3\\lib\\site-packages (from matplotlib->wordcloud) (21.3)\n",
-      "Requirement already satisfied: kiwisolver>=1.0.1 in c:\\users\\nairm\\anaconda3\\lib\\site-packages (from matplotlib->wordcloud) (1.4.2)\n",
-      "Requirement already satisfied: six>=1.5 in c:\\users\\nairm\\anaconda3\\lib\\site-packages (from python-dateutil>=2.7->matplotlib->wordcloud) (1.16.0)\n",
-      "Installing collected packages: wordcloud\n",
-      "Successfully installed wordcloud-1.8.2.2\n",
-      "Note: you may need to restart the kernel to use updated packages.\n"
-     ]
-    }
-   ],
-   "source": [
-    "%pip install wordcloud"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 14,
    "metadata": {},
    "outputs": [],
@@ -442,13 +410,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# EDA"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "Number of times each question appeared in our database"
    ]
   },
@@ -692,7 +653,7 @@
     "<ol> \n",
     "    <li> Sample 1M data points </li>\n",
     "    <li> Separate out code-snippets from Body </li>\n",
-    "    <li> Remove Spcial characters from Question title and description (not in code)</li>\n",
+    "    <li> Remove Special characters from Question title and description (not in code)</li>\n",
     "    <li> Remove stop words (Except 'C') </li>\n",
     "    <li> Remove HTML Tags </li>\n",
     "    <li> Convert all the characters into small letters </li>\n",
@@ -1107,7 +1068,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Converting into a Binary Vector"
+    "## Converting into a Binary Vector"
    ]
   },
   {
@@ -1362,8 +1323,8 @@
     }
    ],
    "source": [
-    "# classifier = OneVsRestClassifier(SGDClassifier(loss='log', alpha=0.00001, penalty='l1'), n_jobs=-1)\n",
-    "# classifier.fit(x_train_multilabel, y_train)"
+    "classifier = OneVsRestClassifier(SGDClassifier(loss='log', alpha=0.00001, penalty='l1'), n_jobs=-1)\n",
+    "classifier.fit(x_train_multilabel, y_train)"
    ]
   },
   {
@@ -1372,7 +1333,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# pickle.dump(classifier, open('model.pkl', 'wb'))"
+    "pickle.dump(classifier, open('model.pkl', 'wb'))"
    ]
   },
   {
