precision and recall score

--- a/code.ipynb
+++ b/code.ipynb
@@ -10,11 +10,8 @@
     "warnings.filterwarnings(\"ignore\")\n",
     "import pandas as pd\n",
     "import sqlite3\n",
-    "import csv\n",
     "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns\n",
     "import numpy as np\n",
-    "from wordcloud import WordCloud\n",
     "import re\n",
     "import os\n",
     "from sqlalchemy import create_engine # database connection\n",
@@ -29,8 +26,7 @@
     "from sklearn.linear_model import SGDClassifier\n",
     "from sklearn import metrics\n",
     "from sklearn.metrics import f1_score,precision_score,recall_score\n",
-    "from sklearn.linear_model import LogisticRegression\n",
-    "from datetime import datetime\n"
+    "from datetime import datetime"
    ]
   },
   {
